nfl/logs/nfl_passing_yards_props_scheduler_20251214_205258.log
============================================================
Scheduler run: nfl_passing_yards_props
Time: Sun Dec 14 20:52:58 EST 2025
Working dir: /Users/rico/sports-models/nfl
Script: nfl_passing_yards_props_model.py
============================================================
  File "/Users/rico/sports-models/nfl/nfl_passing_yards_props_model.py", line 1325
    .pick-yes { background: rgba(16, 185, 129, 0.15); color: #10b981; box-shadow: 0 2px 8px rgba(16, 185, 129, 0.2); }}
                                                                                                                      ^
SyntaxError: f-string: single '}' is not allowed
